color and spacing fix

--- a/src/styles/components/_heroStyles.scss
+++ b/src/styles/components/_heroStyles.scss
@@ -1,7 +1,7 @@
 .HeroSection {
   height: calc(100vh - 64px);
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
 }
 
