--- a/src/styles/components/_roadmapStyles.scss
+++ b/src/styles/components/_roadmapStyles.scss
@@ -3,7 +3,7 @@
   width: 100%;
   min-height: 269px;
   height: 100%;
-  background-color: $black-color;
+  background-color: $dark-color;
   color: white;
   border-radius: 8px;
 }
