--- a/src/styles/components/_teamStyles.scss
+++ b/src/styles/components/_teamStyles.scss
@@ -1,7 +1,7 @@
 .TeamNoteBox {
   padding: 20px;
   border-radius: 8px;
-  background-color: $black-color;
+  background-color: $dark-color;
   position: relative;
 
   &__Button {
