--- a/src/styles/final.scss
+++ b/src/styles/final.scss
@@ -14,9 +14,9 @@ body {
   padding: 0;
   border: 0;
   font-family: "DisposableDroid", Georgia, serif;
-  color: white;
+  color: #fafafa;
   scroll-behavior: smooth;
-  background-color: $dark-color;
+  background-color: #1f1b25;
 }
 
 .ContentContainer {
